*Empty MediaWiki Message*

--- a/Радаев,_Василий_Кузьмич.mw
+++ b/Радаев,_Василий_Кузьмич.mw
@@ -26,7 +26,7 @@
 '''Радаевень Василий Кузьмич''' ( [[1907]] [[эйзюрковонь 13 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref> - [[1991]] [[ацамковонь 6 чи]] [[Саранск]]) — [[Эрзя|эрзянь]]<ref> Бектяшкина Т. Сияжар, косто саят эсь ундоксот? // Сятко. – 2001. – 2№. – С. 111–113</ref> сёрмадей, фольклоронь пурныця.
 
 ==Эстедензэ==
-Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ<ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref>, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат (1979), раськень сёрмадей Мордовиянь (1980).
+Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ<ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref>, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат<ref name="Библиотека_Радаев "/> (1979), Мордовиянь раськень сёрмадей<ref name="Библиотека_Радаев ">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=1  Библиотека Мордовской литературы. Радаев Василий Кузьмич] {{ref-ru}}</ref> (1980).
 
 == Сёрмадовксонзо ==
 Васенце валморозо «Пастухонь думат» лиссь «Якстере теште» кулялопасо. Комсеце иетнестэ [[XX]] пингенть Радаев В. К. седе сеедьстэ кармась сёрмалеме кулялопатнева «Од ломанень вайгель» ({{lang-ru|«Голос молодежи»}}), «Од велесь» ({{lang-ru|«Молодая деревня»}}) ды «Кажочись» ({{lang-ru|«Беднота»}}). Сёрмады художественной сёрмадовкст тиринь [[Эрзянь кель|эрзянь кельсэ]]. Эсензэ войнань икелень сёрмадовкстнэсэ-тевкстнэсэ, ёвтамотнесэ, валморотнесэ сёрмадеесь ёвтни одкстоматнеде велесэ, лиякстоматнеде потмо ёжосо модань важодицятнень, од прогрессэнь теевкстнеде, конат сюлмавтыть ды кемекстыть советэнь масторонть. 
@@ -48,7 +48,7 @@
 
 Фольклоронь материалтнень ланксо сёрмадозь ульнесть  «Пенза ды Сура» ({{lang-ru|«Пенза и Сура»}}, 1972), «Эрзянь легендат, преданият ды евтамот» ({{lang-ru|«Эрзянские легенды, предания и сказы»}}, 1977), «Тюштя» (1991). 
 
-Кулось [[1991 ие]]нь [[ацамковонь 6 чи]]стэ, калмазь [[Саранск]]ойсэ.
+Кулось [[1991 ие]]нь [[ацамковонь 6 чи]]стэ, калмазь [[Саранск]]ойсэ<ref name="Библиотека_Радаев "/>.
 
 == Сёрм.: ==
 <references />
