*Empty MediaWiki Message*

--- a/Радаев,_Василий_Кузьмич.mw
+++ b/Радаев,_Василий_Кузьмич.mw
@@ -23,7 +23,7 @@
  |википурнавкс         = 
 }}
 {{Лия смустьтне|Радаев (смустьтне)}}
-'''Радаевень Василий Кузьмич''' ( [[1907]] [[эйзюрковонь 13 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref> - [[1991]] [[ацамковонь 6 чи]] [[Саранск]]) — [[Эрзя|эрзянь]]<ref> Бектяшкина Т. Сияжар, косто саят эсь ундоксот? // Сятко. – 2001. – 2№. – С. 111–113</ref> сёрмадей, фольклоронь пурныця.
+'''Радаевень Василий Кузьмич''' ( [[1907]] [[эйзюрковонь 13 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буень]] [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref> - [[1991]] [[ацамковонь 6 чи]] [[Саранск]]) — [[Эрзя|эрзянь]]<ref> Бектяшкина Т. Сияжар, косто саят эсь ундоксот? // Сятко. – 2001. – 2№. – С. 111–113</ref> сёрмадей, фольклоронь пурныця.
 
 ==Эстедензэ==
 Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ<ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref>, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат<ref name="Библиотека_Радаев "/> (1979), Мордовиянь раськень сёрмадей<ref name="Библиотека_Радаев ">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=1  Библиотека Мордовской литературы. Радаев Василий Кузьмич] {{ref-ru}}</ref> (1980).
