*Empty MediaWiki Message*

--- a/Покш_Толкан_веле_(Похвистнева_буень).mw
+++ b/Покш_Толкан_веле_(Похвистнева_буень).mw
@@ -88,7 +88,7 @@
 * [[Кавтаськин, Лука Семенович|Л. С. Кавтаськин]]<ref>[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Luka_Semenovich_Kavtaskin/ Финно-угорские библиотеки России // Лука Семенович КАВТАСЬКИН. Республика Мордовия {{Ref-ru}}]</ref> — ученой, тонавтыця, фольклоронь пурныця
 * А. И. Колесова, Р. А. Пыряева<ref>[http://oktobers.moy.su/index/0-7 ГБОУ Самарской области СОШ пос. Октябрьский ГО Похвистнево Самарской области ПРОЙДЕН  ПУТЬ, ДОСТОЙНЫЙ  ДОБРЫХ  СЛОВ.{{Ref-ru}}]</ref>  — тонавтыцят
 * Ю. В. Мишакин<ref>[http://boltolkay.ru/head/biography.html Администрация сельского поселения Большой Толкай Похвистневского района Самарской области. Биография  {{Ref-ru}}]</ref> — Покш Толкан веленть прявт ( 2010 ожоковонь 18 чистэ).
-* [[Радаев, Василий Кузьмич|Василий Кузьмич Радаев]]<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref><ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref> — эрзянь сёрмадей, фольклоронь пурныця, «Сияжар» морокерьксэнть сёрмадыцязо.
+* [[Радаев, Василий Кузьмич|Василий Кузьмич Радаев]]<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref><ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref><ref name="Библиотека_Радаев ">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=1  Библиотека Мордовской литературы. Радаев Василий Кузьмич] {{ref-ru}}</ref> — эрзянь сёрмадей, фольклоронь пурныця, «Сияжар» морокерьксэнть сёрмадыцязо.
 * [[Раптанов, Тимофей Алексеевич| Тимофея Раптанов]]<ref>[http://www.mrkm.ru/news/?id=1014 Мордовский республиканский объединенный краеведческий музей им. И. Д. Воронина // Певец новой жизни. К 110-летию Т.А. Раптанова{{Ref-ru}}]</ref><ref>[http://slovar.cc/enc/bse/2035100.html  БСЭ Т.А. Раптанов {{Ref-ru}}]</ref>  —  эрзянь прозань сёрмадыця, куляньсёрмадей
 * А. Ф. Рябов<ref>[http://minsocdem.samregion.ru/ryabov-aleksandr-fedorovich Министерство социально-демографической и семейной политики Самарской области: Рябов Александр Федорович{{Ref-ru}}]</ref> —  ({{Lang-ru|Государственное бюджетное учреждение Самарской области «Большетолкайский пансионат для ветеранов труда (дом-интернат для престарелых и инвалидов)»}}) прявт. 
 * Ю. Ф. Рябов<ref>[http://pohvistmr.muob.ru Администрация муниципального района Похвистневский Самарской области {{Ref-ru}}]</ref><ref>[http://museum.samgd.ru/mo/pohvistnevsky/head/  Музей истории Самарского края. Рябов Юрий Фёдорович{{Ref-ru}}]</ref>— [[Похвистневань буе Самарань ёнксcо|Похостнёвонь буенть]] прявт.
