*Empty MediaWiki Message*

--- a/Лёша_Рав.mw
+++ b/Лёша_Рав.mw
@@ -25,7 +25,7 @@
 '''Лёша Рав''' ({{lang-ru|Алексей Владимирович Рогожин}}, [[1909 ие]]  [[эйзюрковонь 7 чи]]  [[Ветькень Республикась|Ветькень Масторонь]] Балабаш-Нурусово велесэ - [[1944 ие]]  [[эйзюрковонь 24 чи]] [[Дрогобыч ош|Дрогобыч]]) — [[Эрзя|эрзянь]]<ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> содавикс валморонь ладсий. Ульнесь Обмоце Ине Масторонь войнасо.
 
 ==Эстедензэ==
-Чачсь [[1909 ие]]нь [[эйзюрковонь 7 чи]]сте [[Ветькень Республикась|Ветькень Масторонь]] Первомайской буень Балабаш-Нурусово велесэ вирень ванстыцянь семиясо.
+Чачсь [[1909 ие]]нь [[эйзюрковонь 7 чи]]сте [[Ветькень Республикась|Ветькень Масторонь]] Первомайской буень Балабаш-Нурусово<ref name="Библиотека_Рогожин">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=4  Библиотека Мордовской литературы. Рогожин (Рав) Алексей Владимирович] {{ref-ru}}</ref> велесэ вирень ванстыцянь семиясо.
 Тензэ ульнесь комсьвейкее ие, зярдо «Якстере теште» кулялопасонть лиссь «Сёрма» васенце валморозо. 
 
 [[Цярмун (Ветькень Республика)|Цярмун]] велесэ сон прядызе школанзо ды те же велявсь важодеме тонавтыцякс Батырэнь педагогонь техникумонть прядоманзо мейле. Цярмунонь сисемьиень школасонть сон важодсь рузонь кель ды литературань тонавтыцякс  1928 иестэ саезь 1932 иес.
@@ -36,10 +36,10 @@
 
 Шкань ютазь, валморонь ладсицясь эсь вийтнень марязь, Лёша Рав кармась  сёрмадомо покш произведеният. 1934-це иестэ лиссь «Галё» исторической поэманзо, 1939-це иестэ - валморонь од кирья-пусмо, козонь совась «Литува» поэмась. «Галё» поэмасонть невтезь кода эрясть эрзянь раськесь   1905 иенть видс. Те сёрмадовксось ульнесь путозь школанть эрзянь келенть программас. «Литува»-сь ульнесь сёрмадозь 1937- 38 иетнестэ, эйсэнзэ ульнесь невтезь эрзянь эрямост Инязоронь правительстванть марто.
 
-[[1940 ие]]стэ лись Лёша Равонь ютавтовксось ветькень кельстэ К. Ивановонь «Нарспи» поэмась. 1941 иестэ саезь 1943 иес важодсь завучокс [[Чаунзабуе|Чаунзань]] школасо.
+[[1940 ие]]стэ лись Лёша Равонь ютавтовксось [[ветькень кель]]стэ К. Ивановонь «Нарспи» поэмась. 1941 иестэ саезь 1943 иес важодсь завучокс [[Чаунзабуе|Чаунзань]] школасо.
 
 Ине Масторонь войнанть ушодовомсто саизь фронтов (тунда 1943 иестэ). 
-[[1944 ие]]нь [[эйзюрковонь 24 чи]]стэ маштовсь [[Дрогобыч ош]]онть маласо. Калмазь вейс мароньте.   
+[[1944 ие]]нь [[эйзюрковонь 24 чи]]стэ<ref name="Библиотека_Рогожин"/> маштовсь [[Дрогобыч ош]]онть маласо. Калмазь вейс мароньте.   
 
 == Лецтнемга==
 *[[Цярмун (Ветькень Республика)|Цярмун]] велень ловнома кудось лемдязь А.В. Рогожинэнь лемсэ. ({{lang-ru|Малокармалинская поселенческая библиотека им. А.В. Рогожина}}<ref> [http://ibr-bib.ru/index.php?option=com_content&view=article&id=922:2015-01-29-14-14-38&catid=2:2010-12-24-06-17-54 Открытие Года литературы в сельских библиотеках {{ref-ru}}]</ref>) .
