*Empty MediaWiki Message*

--- a/Сире_Пяцера_(Торбейбуе).mw
+++ b/Сире_Пяцера_(Торбейбуе).mw
@@ -61,7 +61,9 @@
 '''Сире Пяцера''' ({{Lang-ru|с. Старые Пичуры}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
-== Сёрм.: ==
+Сире Пяцера велесэ чачсть:
+* [[Родькина, Полина Егоровна|Полина Родькина]]<ref name="Библиотека_Родькина">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=5  Библиотека Мордовской литературы. Родькина Полина Егоровна] {{ref-ru}}</ref>—  мокшонь сёрмадей
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
