*Empty MediaWiki Message*

--- a/Крутой_Гора_(Ицял_буе).mw
+++ b/Крутой_Гора_(Ицял_буе).mw
@@ -58,7 +58,24 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Крутой Гора''' ({{Lang-ru|Крутая Гора}}) — эрзянь веле [[Ицял буе|Ицял буесэ]].
+'''Крутой Гора''', лиякс: '''Крутой<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Крутая Гора}}) — эрзянь веле [[Ицял буе|Ицял буесэ]].
+
+Ашти [[Ратор лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Крутая Гора – веле 55 кудот марто Ицялонь вельсоветсэ''.}}
+{{oq|ru|В «СНМ Средне-Волжского края» (1931) – Крутая Гора, поселок из 55 дворов  Ичалковского сельсовета.}}
+{{Цитатань пе}}
+
+== Веленть лемденть  ==
+Лемесь- характеристика<ref name="Память, запечатленная в слове"/>. 
+
+== Содавикс ломанть те велестэнть ==
+Крутой Гора велесэ чачсть:
+* [[Петайкин, Александр Иванович|Александр Петайкин]]<ref name="Библиотека_Петайкин">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=0  Библиотека Мордовской литературы. Петайкин Александр Иванович] {{ref-ru}}</ref>—  эрзянь валморозей, сёрмадей
+
+== Веленть эрямозо  ==
+
+== Лисьм.: ==
+<references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Ицял буень велеть]]
