*Empty MediaWiki Message*

--- a/Сомазляй_(Ковёлбуе).mw
+++ b/Сомазляй_(Ковёлбуе).mw
@@ -69,7 +69,7 @@
 Эрицятнеде: [[2002 ие]]стэ ульнесь 308 лом., 2010 иень ловномасонть -261 лом.  
 
 == Веленть лемденть  ==
-Лемесь-антропоним. Теевсь икелень ''Сомас<ref name="Память, запечатленная в слове"/>''  (''Сомай''≈''Сомаз''<ref name="РГО_с. Самозлейка"/>) мокшонь цёрань лем + ({{lang-ru|ляй}}  - {{lang-ru|«река»}}). 
+Лемесь-антропоним. Теевсь икелень ''Сомас<ref name="Память, запечатленная в слове"/>''  (''Сомай''≈''Сомаз''<ref name="РГО_с. Самозлейка"/>) мокшонь цёрань лем + ({{lang-mdf|ляй}}  - {{lang-ru|«река»}}). 
 
 == Содавикс ломанть те велестэнть ==
 Сомазляй велесэ чачсть:
