*Empty MediaWiki Message*

--- a/Мокшонь_Пою_(Инесаро_буе).mw
+++ b/Мокшонь_Пою_(Инесаро_буе).mw
@@ -59,9 +59,24 @@
  |язык сайта              = 
 }}
 
-'''Мокшонь Пою''' ({{Lang-ru|с. Мордовская Паевка}}) — мокшонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/i_Mordovskaya_Paevka.htm Многоликая Мордовия: Село Мордовская Паевка] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Инесаро буе]]сэ.
+'''Мокшонь Пою''', лиякс: '''Пойвеле<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''', '''Пою веле<ref name="РГО_с. Мордовская Паевка"/>''' ({{Lang-ru|с. Мордовская Паевка}}) — мокшонь<ref name="РГО_с. Мордовская Паевка">[http://geo13.ru/reestr/object/634 Геопортал РГО в Республике Мордовия: с. Мордовская Паевка] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Инесаро буе]]сэ.
 
-== Сёрм.: ==
+Ашти [[Инсарка лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Паевка  (Средняя Лухма) – веле 117 кудот марто Норовчатонь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Паевка  (Средняя Лухма), село из 177 дворов  Норовчатовского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 542 лом., 2010 иень ловномасонть - 455 лом.  
+
+== Веленть лемденть  ==
+Лемесь теевсь ({{lang-mdf|пою}}  - {{lang-ru|«осина»}})<ref name="Память, запечатленная в слове"/>'' валстонть. 
+
+== Содавикс ломанть те велестэнть ==
+Мокшонь Пою велесэ чачсь:
+* [[Петров, Михаил Трофимович|Михаил Петров]]<ref name="Библиотека_Петров">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=2 Библиотека Мордовской литературы. Петров Михаил Трофимович] {{ref-ru}}</ref>—  мокшонь сёрмадей, куляньсёрмадей
+== Веленть эрямозо  ==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
