--- a/Мокшонь_Пою_(Инесаро_буе).mw
+++ b/Мокшонь_Пою_(Инесаро_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 455<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 455<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -66,7 +66,7 @@
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Паевка  (Средняя Лухма), село из 177 дворов  Норовчатовского уезда.}}
 {{Цитатань пе}}
 
-Эрицятнеде: [[2002 ие]]стэ ульнесь 542 лом., 2010 иень ловномасонть - 455 лом.  
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 542 лом., 2010 иень ловномасонть - 455 лом.  
 
 == Веленть лемденть  ==
 Лемесь теевсь ({{lang-mdf|пою}}  - {{lang-ru|«осина»}})<ref name="Память, запечатленная в слове"/>'' валстонть. 
