*Empty MediaWiki Message*

--- a/Самара_ёнкс.mw
+++ b/Самара_ёнкс.mw
@@ -70,7 +70,7 @@ MSKS=+1|
 * [[Якстереармиянь буе Самарань ёнксcо|Якстереармиянь буе]] ({{lang-ru|Красноармейский район}})
 
 == Самара ёнксонь содавикс эрзятне<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>== 
-# Петрова Ксения Семёновна (1892, Бугуруслан ош, Самарань губ. - 1942, Ташто Пиче веле, Клявля буень, Куйбышевэнь ёнкс). Драматург.
+# [[Петрова, Ксения Семёновна|Ксения Петрова]]<ref name="Библиотека_Петрова">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=3 Библиотека Мордовской литературы. Петрова Ксения Семеновна] {{ref-ru}}</ref> (1892, [[Бугуруслан ош]], Самарань губ. - 1942, Ташто Пиче веле, Клявля буень, Куйбышевэнь ёнкс). Драматург.
 #  Дорогойченко (Дорогойченков) Алексей Яковлевич (1894 -1947). Прозаик, валморозей, публицист, критик.
 #  [[Боров, Михаил Романович|Боров Михаил Романович]] (1896, [[Якстере Лисьмапрят (Похвистнева буень)|Архангельские Ключи]] Самарань губ. - 1941, Киев ош). Эрзянь бороциця, Россиянь чемпион.
 #  Дмитрий Морской (Малышев Дмитрий Ивановичень) (1897 - 1956). Эрзянь валморозей, прозаик.
