*Empty MediaWiki Message*

--- a/Мокшень_Куженя_(Пейкужо_буе).mw
+++ b/Мокшень_Куженя_(Пейкужо_буе).mw
@@ -1,7 +1,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Мокшень Куженя
- |оригинальное название   = {{Lang-ru|Мордовская Поляна}}<br/>{{Lang-mdf|Мокшень Куженя}}
+ |оригинальное название   = {{Lang-ru|с. Мордовская Поляна}}<br/>
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 924
+  |эрицятне               = 924<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,9 +58,24 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Мокшонь Куженя''' ({{Lang-ru|Мордовская Поляна}}, {{Lang-mdf|Мокшень Куженя}}) — [[мокшот|мокшонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]].
-Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
+'''Мокшонь Куженя<ref name="РГО_с. Мордовская Поляна">[http://geo13.ru/reestr/object/580 Геопортал РГО в Республике Мордовия: с. Мордовская Поляна] {{Ref-ru}}</ref>''', лиякс: '''Кужа<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|с. Мордовская Поляна}}, {{Lang-mdf|Мокшень Куженя}}) — [[мокшот|мокшонь]]<ref name="РГО_с. Мордовская Поляна"/> веле [[Мордовия Республикась|Мордовиясо]]. Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
 
+Ашти [[Лундан лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Мордовская Поляна – веле 4 кудот марто Инсаронь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Мордовская Поляна, деревня из 4 дворов  Инсарского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 1147 лом., 2010 иень ловномасонть - 924 лом.  
+== Веленть лемденть  ==
+Лемесь теевсь ({{lang-mdf|кужа}}  - {{lang-ru|«поляна»}})<ref name="Память, запечатленная в слове"/>'' валстонть. 
+
+== Содавикс ломанть те велестэнть ==
+Мокшонь Куженя велесэ чачсь:
+* [[Пинясов, Григорий Ильич|Григорий Пинясов]]<ref name="Библиотека_Пинясов">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=6 Библиотека Мордовской литературы. Пинясов Григорий Ильич] {{ref-ru}}</ref>—  мокшонь валморозей, ютавтыця, «Мокша» ковставксонть прявтредактор (1982 - 1998). 
+== Веленть эрямозо  ==
+
+== Лисьм.: ==
+<references />
 
 [[Category:Мордовиянь велеть|М]]
 [[Category:Пейкужо буень велеть|М]]
