--- a/Мокшень_Куженя_(Пейкужо_буе).mw
+++ b/Мокшень_Куженя_(Пейкужо_буе).mw
@@ -72,6 +72,7 @@
 == Содавикс ломанть те велестэнть ==
 Мокшонь Куженя велесэ чачсь:
 * [[Пинясов, Григорий Ильич|Григорий Пинясов]]<ref name="Библиотека_Пинясов">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=6 Библиотека Мордовской литературы. Пинясов Григорий Ильич] {{ref-ru}}</ref>—  мокшонь валморозей, ютавтыця, «Мокша» ковставксонть прявтредактор (1982 - 1998). 
+* [[Пинясов Яков Максимович|Яков Пинясов]]<ref name="Библиотека_Пинясов Яков">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=7 Библиотека Мордовской литературы. Пинясов Яков Максимович] {{ref-ru}}</ref>—  мокшонь сёрмадей.
 == Веленть эрямозо  ==
 
 == Лисьм.: ==
