--- a/Ине-Петрань_ош.mw
+++ b/Ине-Петрань_ош.mw
@@ -2,7 +2,7 @@
  |статус                  = Прявтпутозь ош
  |Эрзянь лем              = Ине-Петрань ош
  |оригинальное название   = {{lang-ru|Санкт-Петербург}}
- |изображение             = SPB Collage 2014-2.jpg
+ |изображение             = SPB Collage 2014-3.png
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = Coat of Arms of Saint Petersburg (2003).svg
