*Empty MediaWiki Message*

--- a/Шемышень_буе_(Пенза_ёнкс).mw
+++ b/Шемышень_буе_(Пенза_ёнкс).mw
@@ -10,16 +10,68 @@
 
 
 == Буенть велетне ==
+=== Мокшонь ===
+* [[Ивановка (Шемышейбуе)|Ивановка]]<ref name="Полубояров"/> 
+* [[Красногорка (Шемышейбуе)|Красногорка]]<ref name="Полубояров"/> 
+* [[Пиксанкино (Шемышейбуе)|Пиксанкино]]<ref name="Полубояров"/> - (икеле: Никольское)
+* [[Потьма (Шемышейбуе)|Потьма]]<ref name="Полубояров"/> 
+* [[Старая Яксарка (Шемышейбуе)|Старая Яксарка]]<ref name="Полубояров"/> - (икеле: Старая Ексарка, Рождественское),
+* [[Чиндясы (Шемышейбуе)|Чиндясы]]<ref name="Полубояров"/> - (икеле: Старые Чиндясы, Старая Чиндяскина, Новая Чиндяскина. Шиндяскина)
 
+
+===Печкасонь ===
+* [[Усть-Уза (Шемышейбуе)|Усть-Уза]]<ref name="Полубояров"/> - (икеле: Старая Усть-Уза,  Оз)
 === Рузонь ===
+* [[Александро-Богдановка (Шемышейбуе)|Александро-Богдановка]]<ref name="Полубояров"/> - (икеле: Тюревка, Тюрево, Малютино, Щербово, Александровка, Богдановка)
+* [[Бариновка (Шемышейбуе)|Бариновка]]<ref name="Полубояров"/> - (икеле: Никольский Выселок, Барановка)
+* [[Борятино (Шемышейбуе)|Борятино]]<ref name="Полубояров"/> - (икеле: Барятино, Покровское)
+* [[Бутурлинка (Шемышейбуе)|Бутурлинка]]<ref name="Полубояров"/> - (икеле: Норка)
+* [[Варваровка (Шемышейбуе)|Варваровка]]<ref name="Полубояров"/> - (икеле: Тюревка)
+* [[Верхозим (Шемышейбуе)|Верхозим]]<ref name="Полубояров"/> - (икеле: Верхазим, Черкасское, Козьмодемьянское)
+* [[Виляевка (Шемышейбуе)|Виляевка]]<ref name="Полубояров"/> - (икеле: Веляевка)
+* [[Воробьёвка (Шемышейбуе)|Воробьёвка]]<ref name="Полубояров"/> - (икеле: Воробьевка, Черыкайка, Чарыкайка)
+* [[Жедрино (Шемышейбуе)|Жедрино]]<ref name="Полубояров"/> - (икеле: Жедринка, Жердино, Верхозим)
+* [[Кузнецовка (Шемышейбуе)|Кузнецовка]]<ref name="Полубояров"/> - (икеле: Норка, Абалдуевка)
+* [[Лесной (Шемышейбуе)|Лесной]]<ref name="Полубояров"/> 
+* [[Лубянское (Шемышейбуе)|Лубянское]]<ref name="Полубояров"/> - (икеле: Лубянка, Лубянки)
+* [[Малыгино (Шемышейбуе)|Малыгино]]<ref name="Полубояров"/> - (икеле: Чирыкан, Чарыкайка, Черыкайка)
+* [[Малютино (Шемышейбуе)|Малютино]]<ref name="Полубояров"/> - (икеле: Щербо-Малютино, Щербовка)
+* [[Надеждино (Шемышейбуе)|Надеждино]]<ref name="Полубояров"/> - (икеле: Надеждинка, Мансыревка, Манцеревка, Мансуровка)
+* [[Неклюдово (Шемышейбуе)|Неклюдово]]<ref name="Полубояров"/> - (икеле: Никольское, Неклюдовка)
+* [[Пестровка (Шемышейбуе)|Пестровка]]<ref name="Полубояров"/> - (икеле: Пёстровка, Ивановское, Верхозим)
+* [[Русская Норка (Шемышейбуе)|Русская Норка]]<ref name="Полубояров"/> - (икеле: Архангельское)
+* [[Семь ключей (Шемышейбуе)|Семь ключей]]<ref name="Полубояров"/> - (икеле: Семиключ)
+* [[Синодское (Шемышейбуе)|Синодское]]<ref name="Полубояров"/> - (икеле: Архангельское, Верхозим)
+* [[Степановка (Шемышейбуе)|Степановка]]<ref name="Полубояров"/> 
+* [[Тюревка (Шемышейбуе)|Тюревка]]<ref name="Полубояров"/> - (икеле: Тюрево, Малютино, Щербово, Александровка, Богдановка, Верхозим, Верхазим)
+* [[Щербовка (Шемышейбуе)|Щербовка]]<ref name="Полубояров"/> - (икеле: Щербово)
+
 
 === Эрзянь ===
-* [[Арапина (Шемышейбуе)|Арапина]]
-* [[Ташто Дёмкино веле]]
-
-=== Мокшонь ===
+* [[Азрапино (Шемышейбуе)|Азрапино]]<ref name="Полубояров">Полубояров М. С. Весь Пензенский край. [http://www.suslony.ru/Penzagebiet/Shemysh.htm Шемышейский район] {{ref-ru}}</ref>
+* [[Арапина (Шемышейбуе)|Арапина]]<ref name="Полубояров"/>
+* [[Дубровка-на-Узе (Шемышейбуе)|Дубровка-на-Узе]]<ref name="Полубояров"/> (икеле: Дубровка, Рождественское, Вечканино, Вечканкино)
+* [[Каргалейка (Шемышейбуе)|Каргалейка]]<ref name="Полубояров"/> - (икеле: Михайло-Архангельское)
+* [[Каржимант (Шемышейбуе)|Каржимант]]<ref name="Полубояров"/> - (икеле: Каржиман, Каржимант, Вергазим)
+* [[Мачкасы (Шемышейбуе)|Мачкасы]]<ref name="Полубояров"/> - (икеле: Рождественское)
+* [[Мордовская Норка (Шемышейбуе)|Мордовская Норка]]<ref name="Полубояров"/>  
+* [[Новая Яксарга (Шемышейбуе)|Новая Яксарга]]<ref name="Полубояров"/> - (икеле: Новая Ексарка),
+* [[Новый Мачим (Шемышейбуе)|Новый Мачим]]<ref name="Полубояров"/> - (икеле: Чимирлей, Чемирчей, Чимильлей)
+* [[Сосновка (Шемышейбуе)|Сосновка]]<ref name="Полубояров"/>
+* [[Старое Захаркино (Шемышейбуе)|Старое Захаркино]]<ref name="Полубояров"/> - (икеле: Захаркина, Вежнянга)
+* [[Ташто Дёмкино веле]]<ref name="Полубояров"/> - (икеле: Старое Демкино, Демино, Демкина)
+* [[Старое Назимкино (Шемышейбуе)|Старое Назимкино]]<ref name="Полубояров"/> - (икеле: Архангельское, Назимкина)
+* [[Старый Мачим (Шемышейбуе)|Старый Мачим]]<ref name="Полубояров"/> - (икеле: Козьмодемьянское, Мочим)
+* [[Усть-Мурза (Шемышейбуе)|Усть-Мурза]]<ref name="Полубояров"/> - (икеле: Усть-Уза-Мурза)
+* [[Янго-Пря (Шемышейбуе)|Янго-Пря]]<ref name="Полубояров"/>
 
 === Эрзянь ды мокшонь ===
-* [[Наскафтум (Шемышейбуе)| Наскафтум ]] (Наскафтым)
+* [[Колдаис (Шемышейбуе)|Колдаис]]<ref name="Полубояров"/> - (Сучкино, Нижний Колдаис, Новокрещеное),
+* [[Наумкино (Шемышейбуе)|Наумкино]]<ref name="Полубояров"/> - (Нянга) 
+* [[Наскафтум (Шемышейбуе)| Наскафтум ]]<ref name="Полубояров"/> - (Наскафтым)
+* [[Ранго-лисьма (Шемышейбуе)|Ранго-лисьма]]<ref name="Полубояров"/> 
+
+== Лисьм.: ==
+<references />
 
 [[Category:Пенза ёнксонть буетне]]
