*Empty MediaWiki Message*

--- a/Ташто_Дёмкино_веле.mw
+++ b/Ташто_Дёмкино_веле.mw
@@ -80,7 +80,7 @@
 
 == Веленть эрямозо  ==
 Ули [[чувтт|чувтосто]] церькува, кевень юрт лангсо ({{Lang-ru|Храм во имя свт. и чуд. Николая}}), ульнесь путозь-стявтозь [[1859 ие]]стэ.
-Таркат<ref name="Древности Пензенского края"/>: '''Пуринáтка''' — латко лисьмапря марто, саеви {{Lang-myv|'''пуре'''}} - ({{Lang-ru|«хмельной напиток для языческих ритуалов»}}) + {{Lang-myv|'''латко'''}} - ({{Lang-ru|«овраг»}}). Неень шкасто тесэ ютавтыть «Пуре латко»<ref name="Erzäks.ru">[http://erzyaks.ru/myv/yutas-erzyaks-pure-latko-2016/ Erzäks.ru // Ютась эрзякс «Пуре латко – 2016»]{{ref-ru}}, {{ref-myv}}, {{ref-eng}}</ref><ref name="Администрация">[http://shem.pnzreg.ru/news/2016/06/27/15083978  Администрация Шемышейского района официальный сайт // Прошел районный национально-культурный праздник «Пуре Латка»]{{ref-ru}}</ref>покшчи.
+Таркат<ref name="Древности Пензенского края"/>: '''Пуринáтка''' — латко лисьмапря марто, саеви {{Lang-myv|'''пуре'''}} - ({{Lang-ru|«хмельной напиток для языческих ритуалов»}}) + {{Lang-myv|'''латко'''}} - ({{Lang-ru|«овраг»}}). Неень шкасто тесэ ютавтыть «Пуре латко»<ref name="Erzäks.ru">[http://erzyaks.ru/myv/yutas-erzyaks-pure-latko-2016/ Erzäks.ru // Ютась эрзякс «Пуре латко – 2016»]{{ref-ru}}, {{ref-myv}}, {{ref-en}}</ref><ref name="Администрация">[http://shem.pnzreg.ru/news/2016/06/27/15083978  Администрация Шемышейского района официальный сайт // Прошел районный национально-культурный праздник «Пуре Латка»]{{ref-ru}}</ref>покшчи.
 
 == Сёрм.: ==
 <references />
