*Empty MediaWiki Message*

--- a/Обиница_(Меремяэ_буе).mw
+++ b/Обиница_(Меремяэ_буе).mw
@@ -70,6 +70,7 @@ Obinitsa muuseum 2013 sügis.JPG|Обиницань музеесь
 Soome-ugri kultuuripealinn 2015 logo.jpg|2015 иень Суоми-угрань Шкинемань Прявтош
 Obinitsa_lipud.JPG|Суоми-угрань раськетьнень коцтост Обиницясо
 Grupifoto Obinitsas.JPG|2015 иень умарьковонь 1-4 читнестэ ютась II суоми-угрань вики-семинар. Васеньце важодема чись ушодовсь Обиницясто.
+Erzya ethnic flag Obnitca.JPG|Эрзянь раськень коцтось Обиница велесэ, Меремяэ буесэ, Эстэнь Мастор. [[2015 ие]]нь [[умарьковонь 1 чи]]стэ тесэ кочкасть Сето раськен инязор/ава. Сакшность эрьва ёндо [[суоми-угрань раськеть]].
 </gallery>
 
 ==Лисьм. ==
