*Empty MediaWiki Message*

--- a/Шемышень_буе_(Пенза_ёнкс).mw
+++ b/Шемышень_буе_(Пенза_ёнкс).mw
@@ -1,12 +1,54 @@
-'''Шемышейбуе''' — буесь кона ашти [[Пенза ёнкс]]онть лембе ёнсо. Прявт велесь — [[Шемышей]]. 
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     =Шемышень буе
+ | Эсьлем                         = {{lang-ru|Шемышейский район Пензенской области}}
+ | Герб                           = Coat of Arms of Shemysheisky rayon (Penza oblast).png
+ | Коцт                           = Flag of Shemysheisky rayon (Penza oblast).png
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Муниципальной буе]]
+ | Ашти                           = [[Пенза ёнкс]]со
+ | Совавты                       = 13 мунициальной пурнавкст
+ | Прявтош                        = [[Шемышей]]
+ | Путозь                    = [[1932 ие]]  
+ | Упразднение                    = 
+|Глава                            = Тепцов Анатолий&nbsp;Александрович
+  |Название главы                  = Администрациянь прявт
+ |Прявт2                           = 
+  |Название главы2                 = 
+ | Карта                          =    Location of Shemysheysky Region (Penza Oblast).svg
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      = 58
+ | Сайт                           = http://rshem.pnzreg.ru/
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
+
+'''Шемышейбуе''' — буесь кона ашти [[Пенза ёнкс]]онть лембе ёнсо. Прявт велесь — [[Шемышей]]. Покшолмазо: 1595,10<ref name='56_8006001'>[http://www.gks.ru/dbscripts/munst/munst56/DBInet.cgi?pl=8006001 Пензенская область. Общая площадь земель муниципального образования]{{ref-ru}}</ref> вп² (14-це тарка)
 
 == Эрицятне ==
+Весемикс<ref name='ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ'>[http://pnz.gks.ru/wps/wcm/connect/rosstat_ts/pnz/resources/a7ab670042a64713a4f3ad86540d86a5/Том+1+Численность+и+размещение+населения+Пензенской+области.pdf ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ НАСЕЛЕНИЯ ПЕНЗЕНСКОЙ ОБЛАСТИ ИТОГИ ВСЕРОССИЙСКОЙ ПЕРЕПИСИ НАСЕЛЕНИЯ 2010 ГОДА]{{ref-ru}}</ref>: 17661 лом. (1,24 %, 15-це тарка): 8314 цёра ломанть, 9347 ава ломанть, 10,48 лом./вп²   
 
-[[Эрзят]] ды [[мокшот]] — 57,2%
-
-[[Рузт]] — 33,8%
-
-[[Печкаст]] — 7,8%
+[[Эрзят]] ды [[мокшот]] — 57,2%, [[рузт]] — 33,8%, [[печкаст]] — 7,8%
 
 
 == Буенть велетне ==
