--- a/Шемышень_буе_(Пенза_ёнкс).mw
+++ b/Шемышень_буе_(Пенза_ёнкс).mw
@@ -46,10 +46,17 @@
 '''Шемышейбуе''' — буесь кона ашти [[Пенза ёнкс]]онть лембе ёнсо. Прявт велесь — [[Шемышей]]. Покшолмазо: 1595,10<ref name='56_8006001'>[http://www.gks.ru/dbscripts/munst/munst56/DBInet.cgi?pl=8006001 Пензенская область. Общая площадь земель муниципального образования]{{ref-ru}}</ref> вп² (14-це тарка)
 
 == Эрицятне ==
-Весемикс<ref name='ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ'>[http://pnz.gks.ru/wps/wcm/connect/rosstat_ts/pnz/resources/a7ab670042a64713a4f3ad86540d86a5/Том+1+Численность+и+размещение+населения+Пензенской+области.pdf ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ НАСЕЛЕНИЯ ПЕНЗЕНСКОЙ ОБЛАСТИ ИТОГИ ВСЕРОССИЙСКОЙ ПЕРЕПИСИ НАСЕЛЕНИЯ 2010 ГОДА]{{ref-ru}}</ref>: 17661 лом. (1,24 %, 15-це тарка): 8314 цёра ломанть, 9347 ава ломанть, 10,48 лом./вп²   
+
+{| class="wikitable"
+|-
+! Ие !! 1795 !! 1859!! 1911  !! 1926  !!  1939!! 1959  !! 1970 !! 1979 !! 1989 !!2002 !!2004 !!2013
+|-
+|лом<ref name="Полубояров"/>. || 18422 || 38402 ||  67489 || 72461|| 46602 || 36996 || 34021||26581 || 22765 || 19063 ||18904 ||17021
+|}
+
+Неень шкасто весемикс эрить<ref name='ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ'>[http://pnz.gks.ru/wps/wcm/connect/rosstat_ts/pnz/resources/a7ab670042a64713a4f3ad86540d86a5/Том+1+Численность+и+размещение+населения+Пензенской+области.pdf ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ НАСЕЛЕНИЯ ПЕНЗЕНСКОЙ ОБЛАСТИ ИТОГИ ВСЕРОССИЙСКОЙ ПЕРЕПИСИ НАСЕЛЕНИЯ 2010 ГОДА]{{ref-ru}}</ref>: 17661 лом. (1,24 %, 15-це тарка): 8314 цёра ломанть, 9347 ава ломанть, 10,48 лом./вп²   
 
 [[Эрзят]] ды [[мокшот]] — 57,2%, [[рузт]] — 33,8%, [[печкаст]] — 7,8%
-
 
 == Буенть велетне ==
 === Мокшонь ===
